updated styling fixed bug in table styling fixed incorrect whitespace in hydro and fortis components added table styling to hydro and fortis tabs

--- a/frontend/OurFootprint/src/app/components/home/calculator/hydro/hydro.component.scss
+++ b/frontend/OurFootprint/src/app/components/home/calculator/hydro/hydro.component.scss
@@ -2,3 +2,16 @@
     display: flex;
     flex-direction: column;
 }
+
+.table-outter-container {
+    overflow: auto;
+
+    .table-inner-container {
+        min-width: 405px;
+
+        .table {
+            margin-top: 2em;
+            width: 100%;
+        }
+    }
+}
